Se agregan las redicciones a los botones de doctor,turnos y pacientes

--- a/Clinica/Clinica/clinicaapp/templates/template_padre.html
+++ b/Clinica/Clinica/clinicaapp/templates/template_padre.html
@@ -20,10 +20,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!">Clinica</a>
-                <a class="navbar-brand" href="">Pacientes</a>
-                <a class="navbar-brand" href="">Turnos</a>
-                <a class="navbar-brand" href="">Doctores</a>
+                <a class="navbar-brand" href="!">Clinica</a>
+                <a class="navbar-brand" href="{% url 'Pacientes' %}">Pacientes</a>
+                <a class="navbar-brand" href="{% url 'Turnos' %}">Turnos</a>
+                <a class="navbar-brand" href="{% url 'Doctores' %}">Doctores</a>
             </div>
         </nav>
         <!-- Masthead-->
